back: tournee nominal scenario works from creation to auto completion